<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Password Manager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">First screen</string>
    <string name="hello">Hello Raymond</string>
    
    <string name="save">save</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="random">Random Password</string>
    
    
    <string name="text_adding_new_password">Adding new password</string>
    <string name="text_name">Please input the title for this password</string>
    <string name="text_username">Please input the username</string>
    <string name="text_password">Please input the password (case sensitive)</string>
    <string name="text_description">Please input the description (can be searched later)</string>
    <string name="text_created_date">Created at : </string>
    <string name="text_updated_date">Updated at : </string>
    
    
    <string name="search">Search</string>
    
    <string name="action_search">Search</string>
    <string name="action_add">Add</string>
    <string name="action_about">About</string>
    <string name="action_check_updates">Check updates</string>
    
    <string name="search_hint">type name or description here</string>
    
    
    
    <!-- Menu texts -->
    <string name="menu_create_new">Add new password</string>
    <string name="menu_edit">Edit existing passwords</string>
    
    <!-- Image descriptions -->
    <string name="image_delete">delete</string>
    <string name="image_edit">edit</string>

</resources>
