<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="always"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_add"
        android:showAsAction="always"
        android:title="@string/action_add"/>

    <item
        android:id="@+id/action_about"
        android:showAsAction="never"
        android:title="@string/action_about"/>

    <item
        android:id="@+id/action_check_updates"
        android:showAsAction="never"
        android:title="@string/action_check_updates"/>

</menu>