<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#FFFFFFFF">

     <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/text_name"/>

        <EditText android:id="@+id/add_password_name" 
                  android:layout_width="fill_parent" 
                  android:layout_height="wrap_content"
                  android:singleLine="true"
                  android:layout_marginBottom="10dip" android:inputType="text"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/text_username"/>

        <EditText android:id="@+id/add_password_username" 
                  android:layout_width="fill_parent" 
                  android:layout_height="wrap_content"
                  android:singleLine="true"
                  android:layout_marginBottom="10dip" android:inputType="text"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/text_password"/>

        <EditText android:id="@+id/add_password_password" 
                  android:layout_width="fill_parent" 
                  android:layout_height="wrap_content"
                  android:inputType="textVisiblePassword"
                  android:layout_marginBottom="10dip"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/text_description"/>

        <EditText android:id="@+id/add_password_description"
                  android:layout_width="fill_parent" 
                  android:layout_height="wrap_content"
                  android:singleLine="true"
                  android:layout_marginBottom="10dip" android:inputType="textMultiLine"/>

        

        </LinearLayout>

    </ScrollView> 

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@android:style/ButtonBar">

        <Button android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:onClick="onSave"
                style="@android:style/Widget.Button"
                android:layout_weight="1"/>

        <Button android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="@android:style/Widget.Button"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>