<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/password_detail_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="#FFFFFFFF">

    <!-- name row -->

    <TableRow
        android:id="@+id/password_detail_row1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >

        <TextView
            android:id="@+id/textView1"
            android:text="@string/text_name" />

        <EditText
            android:id="@+id/text_field_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_span="2"
            android:inputType="text"
            android:singleLine="true" />
    </TableRow>

    <!-- username row -->

    <TableRow
        android:id="@+id/password_detail_row2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_username" />

        <EditText
            android:id="@+id/text_field_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_span="2"
            android:inputType="text"
            android:singleLine="true" />
    </TableRow>

    <!-- password row -->

    <TableRow
        android:id="@+id/password_detail_row3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_password" />

        <EditText
            android:id="@+id/text_field_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:inputType="text"
            android:singleLine="true"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/random_password_button"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSave"
            android:text="@string/random" />
    </TableRow>

    <!-- description row -->

    <TableRow
        android:id="@+id/password_detail_row4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_description" />

        <EditText
            android:id="@+id/text_field_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_span="2"
            android:inputType="text"
            android:singleLine="true" />
    </TableRow>

    <LinearLayout
        style="@android:style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/save_button"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSave"
            android:text="@string/save" />

        <Button
            android:id="@+id/cancel_button"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>

</TableLayout>